ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: webingress
spec:
   ingressClassName: nginx
   rules:
   - host: "a6d9e8447e81842bc91258d93928d1b3-1985972937.us-east-1.elb.amazonaws.com"
     http:
       paths:
       - path: "/"
         pathType: Prefix
         backend:
           service:
            name: websvc
            port:
             number: 80
